--- a/style.css
+++ b/style.css
@@ -157,3 +157,14 @@ nav.LDM ul {
 
 
 
+.ragemode{
+  font-family:Chicle, cursive;
+  font-size:58px;
+  color:blue;
+}
+
+.ragemode2{
+  font-family:Notable;
+  font-size:40px;
+  color:green;
+}
